<?xml version="1.0"?>
<package format="2">
  <name>M5Stack_Bluetooth_rosserial_example</name>
  <version>0.0.0</version>
  <description>The M5Stack_Bluetooth_rosserial_example package</description>

  <maintainer email="sktometometo@gmail.com">sktometometo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
